installation et configuration de prettier et eslint

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,9 +1,7 @@
 * {
-
-color: #717B5B;
-color: #95A278;
-color: #CB6429;
-color: #F16E22;
-color: #F6F7EC;
-
+    color: #717b5b;
+    color: #95a278;
+    color: #cb6429;
+    color: #f16e22;
+    color: #f6f7ec;
 }
